@@ -1,3 +1,11 @@
+2001-06-03  Per Bothner  <per@bothner.com>
+
+	* DisplayFormat.java:  New class, extends Procedure and implements
+	FormatToConsumer.  Contains code to format for Lisp-like languages.
+	* Makefile.am:  Update accordingly.
+
+	* LispFormat.java (LispFreshlineFormat.format):  Use freshLine method.
+
 2001-05-16  Per Bothner  <per@bothner.com>
 
 	* AddOp.java:  Use LangPrimType instead of plain PrimTypes.
